[gd_scene load_steps=17 format=2]

[ext_resource path="res://cenas/Tiro_Area2D.gd" type="Script" id=1]
[ext_resource path="res://img/sprites/bulletRed1_outline.png" type="Texture" id=2]
[ext_resource path="res://img/sprites/smokeWhite1.png" type="Texture" id=3]
[ext_resource path="res://img/sprites/explosion1.png" type="Texture" id=4]
[ext_resource path="res://img/sprites/explosion2.png" type="Texture" id=5]
[ext_resource path="res://img/sprites/explosion3.png" type="Texture" id=6]
[ext_resource path="res://img/sprites/explosion4.png" type="Texture" id=7]
[ext_resource path="res://img/sprites/explosion5.png" type="Texture" id=8]
[ext_resource path="res://img/sprites/explosionSmoke5.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.08912
height = 4.74332

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.296364, 0.725455, 1 )
colors = PoolColorArray( 0.988281, 0.00772095, 0.00772095, 1, 0.985861, 0.9538, 0.612786, 1, 0.984375, 0.984375, 0.984375, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0.10685, 0.2712 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = -41.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.03
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="Animation" id=7]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/path = NodePath("self_destruction:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("self_destruction:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Tiro_Area2D" type="Area2D" groups=[
"cannom_tiro",
]]
collision_layer = 9
collision_mask = 31
script = ExtResource( 1 )

[node name="bala" type="CollisionShape2D" parent="."]
position = Vector2( -0.682625, -0.560084 )
rotation = 1.5708
scale = Vector2( 0.326259, 0.326259 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.690567, -0.466566 )
scale = Vector2( 0.336917, 0.272446 )

[node name="bulletRed1_outline" type="Sprite" parent="."]
position = Vector2( -0.558516, -0.567267 )
rotation = 1.5708
scale = Vector2( 0.671293, 0.49117 )
texture = ExtResource( 2 )

[node name="fuma√ßa" type="Particles2D" parent="."]
position = Vector2( -4.82588, -0.390389 )
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 3 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="self_destruction" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1.19209e-07, -0.390389 )
rotation = 1.5708
scale = Vector2( 0.335527, 0.299344 )
texture = ExtResource( 4 )

[node name="anime_self_destruction" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 7 )
[connection signal="body_entered" from="." to="." method="_on_Tiro_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
